--- a/index.html
+++ b/index.html
@@ -46,7 +46,7 @@
           </svg>
         </li>
         <li role="presentation" class="nav-list">
-          <a id="home-link" href="index.html" role="menuitem" class="active">Home</a>
+          <a id="home-link" href="#home" role="menuitem" class="active">Home</a>
         </li>
         <li role="presentation" class="nav-list">
           <a id="abt-link" href="#about" role="menuitem">About</a>
