--- a/index.html
+++ b/index.html
@@ -45,9 +45,9 @@
               </g>
           </svg>
         </li>
-        <li role="presentation" class="nav-list">
+        <!-- <li role="presentation" class="nav-list">
           <a id="home-link" href="#home" role="menuitem" class="active">Home</a>
-        </li>
+        </li> -->
         <li role="presentation" class="nav-list">
           <a id="abt-link" href="#about" role="menuitem">About</a>
         </li> 
