--- a/index.html
+++ b/index.html
@@ -68,7 +68,7 @@
   <section id="home">
   <div class="profile">
     <!-- Add your portrait image here -->
-    <img src="img/vj.png" class="profile-img" alt="Vj's Portrait Image">
+    <img src="img/LinkPic.png" class="profile-img" alt="Vj's Portrait Image">
     <div class="profile-content">
       <h1>Good Day!!</h1>
       <p>I'm <span>Vijay Prasaad</span>, a budding Web Developer, with a <span>passion</span> to blossom my creativity in the Web World!</p>
@@ -215,7 +215,7 @@
       <!-- Twitter logo -->
       <a href="https://twitter.com/VijayPrasaadKT" target="_blank"><img src="img/twitter_logo.svg" alt="twitter"></a>
       <!-- LinkedIn logo -->
-      <a href="https://www.linkedin.com/in/vijayprasaad-kumarasamythiyagarajan-2969b218/" target="_blank"><img src="img/linkedin_logo.svg" alt="linkedin"></a>
+      <a href="https://www.linkedin.com/in/ktvprasaad-vj/" target="_blank"><img src="img/linkedin_logo.svg" alt="linkedin"></a>
       <!-- Medium logo -->
       <!-- <a href="https://medium.com/@prasaad.vijay/" target="_blank"><img src="img/medium_logo.svg" alt="medium"></a> -->
     </div>
