--- a/index.html
+++ b/index.html
@@ -68,7 +68,7 @@
   <section id="home">
   <div class="profile">
     <!-- Add your portrait image here -->
-    <img src="img/LinkPic.png" class="profile-img" alt="Vj's Portrait Image">
+    <img src="img/vj.png" class="profile-img" alt="Vj's Portrait Image">
     <div class="profile-content">
       <h1>Good Day!!</h1>
       <p>I'm <span>Vijay Prasaad</span>, a budding Web Developer, with a <span>passion</span> to blossom my creativity in the Web World!</p>
