--- a/index.html
+++ b/index.html
@@ -17,7 +17,7 @@
   <!-- Kalam - one of the google fonts -->
   <link href="https://fonts.googleapis.com/css?family=Kalam&display=swap" rel="stylesheet">
   <!-- included css file for styling -->
-  <link rel="stylesheet" href="css/style.production.css" type="text/css">
+  <link rel="stylesheet" href="css/styles.css" type="text/css">
 </head>
 <!---------------------------------------- Body & Header -------------------------------------------->
 <body>
@@ -71,7 +71,8 @@
     <img src="img/vj.png" class="profile-img" alt="Vj's Portrait Image">
     <div class="profile-content">
       <h1>Good Day!!</h1>
-      <p>I'm <span>Vijay Prasaad</span>, a budding Web Developer, with a <span>passion</span> to blossom my creativity in the Web World!</p>
+      <p>
+        A Full Stack Web Developer keen to challenge creative projects and solutions, gain experiences for professional development with the cutting-edge technology and build solid projects to make life better. 
     </div>
     <div class="btn">
       <a id="btn-work" href="#work">#projects</a>
@@ -83,10 +84,13 @@
 <section id="about">
   <div class="iam">
     <h1>I'm...</h1>
-    <p>...a science graduate. At the onset of my career I was a teacher and has since morphed into a software professional. 
-      After working approximately 14 years along the Waterfall model in Mainframe Development and its related support activities, 
-      I am now more Agile to the changing times, including web development to my skill set. 
-      I recently completed my full stack web development bootcamp training with CareerFoundry.
+    <p> Has 14+ years of experience in IT as Developer/Technical Lead in multiple projects, different business domains and geographical locations.
+      With the 13+ years experience in IBM Mainframe Developer and for the past 1+ years in Full Stack Web Development.
+      Responsible in business and functional requirements gathering in collaboration with business product owners.
+      Analyze complex programs for enhancements that involves review of existing systems’ configurations, operating methods and understanding evolving business needs. 
+      Expert in development, unit testing and post production support. 
+      Work in automation tools, performance tuning, data analysis, production issues reduction, knowledge management and sharing. 
+      Work in both water-fall and agile methodologies.
     </p>
       <!-- <img src="img/down.png" alt="Download image"> -->
     <a class="resume" href="files/VijayPrasaad-KumarasamyThiyagarajan-Resume.pdf" target="_blank" download>Resume</a>
@@ -116,7 +120,7 @@
       </div>
       <div class="skills-list__item">
         <img src="img/cloud.png" class="skills-img" alt="Cloud Image">
-        <h4>AWS</h4>
+        <h4>AWS Serverless Function</h4>
         <h4>Heroku</h4>
         <h4>Firebase</h4>
       </div>
@@ -192,7 +196,7 @@
   <div class="contact-dtl">
     <div class="contact-dtl__item msg">
       <h1>Contact</h1>
-      <p>Glad that you are here. <span>Let's team up!!</span> You can reach me through any of my personal details!</p>
+      <p><span>Let's team up!!</span> for our new projects. You can reach me through any of my personal details!</p>
     </div>
     <div class="contact-dtl__item ids">
       <a href="tel:+13024423252">Mobile</a><br>
@@ -223,6 +227,7 @@
   </footer>
   <!-- Accessibility checker and to find errors -->
   <!-- <script src="js/tota11y.min.js"></script> -->
+  <script src="https://cdnjs.cloudflare.com/ajax/libs/gsap/3.2.4/gsap.min.js"></script>
   <script src="js/index.js"></script>
 </body>
 </html>
