--- a/webflixcs.html
+++ b/webflixcs.html
@@ -9,12 +9,13 @@
   <!-- Reset the browser styling -->
   <link rel="stylesheet" type="text/css" href="https://cdnjs.cloudflare.com/ajax/libs/normalize/8.0.0/normalize.min.css">
   <link href="https://fonts.googleapis.com/css?family=Kalam&display=swap" rel="stylesheet">
-  <link rel="stylesheet" href="css/style.production.css" type="text/css">
+  <link rel="stylesheet" href="css/styles.css" type="text/css">
 </head>
 <body>
   <div class="cs">
     <div class="cs__item">
       <h4><a id="cs" href="index.html#contact">Vj ~ Full Stack Web Developer</a></h4>
+      <h4><a id="doc" href="https://webflix-api-2019.herokuapp.com/documentation.html" target="_blank">API Doc</a></h4>
       <h4><a id="site" href="https://webflix-api-2019.herokuapp.com/client/" target="_blank">Visit Site</a></h4>
       <img src="img/1.png" alt="cs">
     </div>
