CSS file update
CSS production file update

--- a/index.html
+++ b/index.html
@@ -17,7 +17,7 @@
   <!-- Kalam - one of the google fonts -->
   <link href="https://fonts.googleapis.com/css?family=Kalam&display=swap" rel="stylesheet">
   <!-- included css file for styling -->
-  <link rel="stylesheet" href="css/styles.css" type="text/css">
+  <link rel="stylesheet" href="css/style.production.css" type="text/css">
 </head>
 <!---------------------------------------- Body & Header -------------------------------------------->
 <body>
