--- a/webflixcs.html
+++ b/webflixcs.html
@@ -9,7 +9,7 @@
   <!-- Reset the browser styling -->
   <link rel="stylesheet" type="text/css" href="https://cdnjs.cloudflare.com/ajax/libs/normalize/8.0.0/normalize.min.css">
   <link href="https://fonts.googleapis.com/css?family=Kalam&display=swap" rel="stylesheet">
-  <link rel="stylesheet" href="css/styles.css" type="text/css">
+  <link rel="stylesheet" href="css/style.production.css" type="text/css">
 </head>
 <body>
   <div class="cs">
