Update header margin
Update header margin

--- a/index.html
+++ b/index.html
@@ -196,7 +196,7 @@
   <div class="contact-dtl">
     <div class="contact-dtl__item msg">
       <h1>Contact</h1>
-      <p><span>Let's team up!!</span> for our new projects. You can reach me through any of my personal details!</p>
+      <p><span>Let's team up!!</span> for our new projects. You can reach me through any of my personal contacts!</p>
     </div>
     <div class="contact-dtl__item ids">
       <a href="tel:+13024423252">Mobile</a><br>
