--- a/index.html
+++ b/index.html
@@ -72,7 +72,7 @@
     <div class="profile-content">
       <h1>Good Day!!</h1>
       <p>
-        A Full Stack Web Developer keen to challenge creative projects and solutions, gain experiences for professional development with the cutting-edge technology and build solid projects to make life better. 
+        A self-motivated and highly skilled IT professional with strong experience and knowledge in problem solving. Highly organized and attention to details to provide high-quality software products to enhance user experience and in turn business. 
     </div>
     <div class="btn">
       <a id="btn-work" href="#work">#projects</a>
@@ -84,16 +84,16 @@
 <section id="about">
   <div class="iam">
     <h1>I'm...</h1>
-    <p> Has 14+ years of experience in IT as Developer/Technical Lead in multiple projects, different business domains and geographical locations.
-      With the 13+ years experience in IBM Mainframe Developer and for the past 1+ years in Full Stack Web Development.
-      Responsible in business and functional requirements gathering in collaboration with business product owners.
-      Analyze complex programs for enhancements that involves review of existing systems’ configurations, operating methods and understanding evolving business needs. 
-      Expert in development, unit testing and post production support. 
-      Work in automation tools, performance tuning, data analysis, production issues reduction, knowledge management and sharing. 
-      Work in both water-fall and agile methodologies.
+    <p> 14+ years of experience in IT as Developer/Technical Lead in multiple projects, different business domains and geographical locations.
+      12+ years experience in IBM Mainframe Developer and for past 2+ years experience in Full Stack Web Development. 
+      Responsible in business and functional requirements gathering, creating solid Design documentation and Technical documentation in collaboration with business product owners.
+      Analyze complex programs for enhancements that involves review of existing systems’configurations, operating methods and understanding evolving business needs. 
+      Proven development skill in web development.
+      Architected and built automation tools, performance tuning, and data analysis,troubleshooting complex issues, providing resolution within service level agreement, reduced tickets thru enhancements, knowledge management and sharing in IBM mainframe technology.
+      Experience in both water-fall and agile methodologies.
     </p>
       <!-- <img src="img/down.png" alt="Download image"> -->
-    <a class="resume" href="files/VijayPrasaad-KumarasamyThiyagarajan-Resume.pdf" target="_blank" download>Resume</a>
+    <a class="resume" href="files/Resume.pdf" target="_blank" download>Resume</a>
   </div>
 </section>
 <!---------------------------------------- Skills Section -------------------------------------------->
