--- a/index.html
+++ b/index.html
@@ -72,7 +72,7 @@
     <div class="profile-content">
       <h1>Good Day!!</h1>
       <p>
-        A self-motivated and highly skilled IT professional with strong experience and knowledge in problem solving. Highly organized and attention to details to provide high-quality software products to enhance user experience and in turn business. 
+        A self-motivated and highly skilled IT professional with great experience and knowledge in problem solving. Highly organized and attention to details to provide high-quality software products to enhance user experience and built trust. As a continuous learner, open to new opportunities in legacy mainframe applications with advanced technologies or full stack web development with new proficiency up skilled in boot camp. 
     </div>
     <div class="btn">
       <a id="btn-work" href="#work">#projects</a>
@@ -83,14 +83,14 @@
 <!---------------------------------------- About Section -------------------------------------------->
 <section id="about">
   <div class="iam">
-    <h1>I'm...</h1>
-    <p> 14+ years of experience in IT as Developer/Technical Lead in multiple projects, different business domains and geographical locations.
-      12+ years experience in IBM Mainframe Developer and for past 2+ years experience in Full Stack Web Development. 
-      Responsible in business and functional requirements gathering, creating solid Design documentation and Technical documentation in collaboration with business product owners.
-      Analyze complex programs for enhancements that involves review of existing systems’configurations, operating methods and understanding evolving business needs. 
-      Proven development skill in web development.
-      Architected and built automation tools, performance tuning, and data analysis,troubleshooting complex issues, providing resolution within service level agreement, reduced tickets thru enhancements, knowledge management and sharing in IBM mainframe technology.
-      Experience in both water-fall and agile methodologies.
+    <h1>About Me</h1>
+    <p> 14+ years of experience in IBM Mainframe Senior Developer/Technical Lead in multiple projects, different business domains and geographical locations.
+      Responsible in business and functional requirements gathering, creating solid Design documentation and Technical documentation in collaboration with business product owners.      
+      Analyze complex programs for enhancements that involves review of existing systems’ configurations, operating methods and understanding evolving business needs.
+      Designed and build automation tools, performance tuning, and data analysis, troubleshooting complex issues, providing resolution within service level agreement, reduced tickets thru enhancements, knowledge management and sharing in IBM mainframe.
+      Hands on with varieties of tools and technologies.
+      Experience in Water-fall and knowledge in Agile methodology. Mentoring and knowledge sharing with the team.
+      Collaborate with different technology teams in providing solutions.
     </p>
       <!-- <img src="img/down.png" alt="Download image"> -->
     <a class="resume" href="files/Resume.pdf" target="_blank" download>Resume</a>
