--- a/index.html
+++ b/index.html
@@ -3,6 +3,9 @@
 <head>
   <meta charset="utf-8">
   <meta name="viewport" content="width=device-width, initial-scale=1">
+  <meta name="keywords" content="Full Stack Web Developer in Conshohocken PA, 
+  MERN Developer in Conshohocken PA, IBM Mainframe Developer in Conshohocken PA, 
+  Professional Web Developer in Conshohocken PA">
   <title>Vijay - Profile</title>
   <!--Favicon-->
   <link rel="shortcut icon" href="img/favicon-16x16.png" type="img/favicon-16x16.png"/>
