Project & Resume update
Changes in all the components.

--- a/index.html
+++ b/index.html
@@ -17,8 +17,7 @@
   integrity="sha384-ggOyR0iXCbMQv3Xipma34MD+dH/1fQ784/j6cY/iJTQUOhcWr7x9JvoRxT2MZw1T"
   crossorigin="anonymous"
   /> -->
-  <!-- Kalam - one of the google fonts -->
-  <link href="https://fonts.googleapis.com/css?family=Kalam&display=swap" rel="stylesheet">
+  <link href="https://fonts.googleapis.com/css2?family=Open+Sans&display=swap" rel="stylesheet">
   <!-- included css file for styling -->
   <link rel="stylesheet" href="css/style.production.css" type="text/css">
 </head>
@@ -26,16 +25,14 @@
 <body>
   <header>
     <a class="vj" href="index.html">
-      <h3>ViJay</h3>
+      <h3>Vijay</h3>
     </a>
-    <!--<img src="https://picsum.photos/300/100" alt="logo" class="page-header__item">--> 
     <nav>
       <svg class="menu" id="menu-btn" viewBox="0 0 27.329 17">
         <g transform="translate(-415.671 -19)">
-            <line  x1="24.329" transform="translate(417.171 34.5)" fill="none" stroke="#fff1cf" stroke-linecap="round" stroke-width="3"></line>
+            <line x1="24.329" transform="translate(417.171 34.5)" fill="none" stroke="#fff1cf" stroke-linecap="round" stroke-width="3"></line>
             <line x1="24.329" transform="translate(417.171 27.5)" fill="none" stroke="#fff1cf" stroke-linecap="round" stroke-width="3"></line>
             <line x1="24.329" transform="translate(417.171 20.5)" fill="none" stroke="#fff1cf" stroke-linecap="round" stroke-width="3"></line>
-            <!-- <line x1="17" transform="translate(424.5 20.5)" fill="none" stroke="#fff1cf" stroke-linecap="round" stroke-width="3"></line> -->
         </g>
       </svg>
       <div id="menu-center">
@@ -48,9 +45,6 @@
               </g>
           </svg>
         </li>
-        <!-- <li role="presentation" class="nav-list">
-          <a id="home-link" href="#home" role="menuitem" class="active">Home</a>
-        </li> -->
         <li role="presentation" class="nav-list">
           <a id="abt-link" href="#about" role="menuitem">About</a>
         </li> 
@@ -58,7 +52,7 @@
           <a id="skl-link" href="#skills" role="menuitem">Skills</a>
         </li> 
         <li role="presentation" class="nav-list">
-          <a id="wrk-link" href="#work" role="menuitem">Work</a>
+          <a id="wrk-link" href="#project" role="menuitem">Projects</a>
         </li>
         <li role="presentation" class="nav-list">
           <a id="cnt-link" href="#contact" role="menuitem">Contact</a>
@@ -71,15 +65,18 @@
   <section id="home">
   <div class="profile">
     <!-- Add your portrait image here -->
-    <img src="img/vj.png" class="profile-img" alt="Vj's Portrait Image">
+    <img src="img/pic1.png" class="profile-img" alt="Vj's Portrait Image">
     <div class="profile-content">
-      <h1>Good Day!!</h1>
+      <!-- <h1>Hello !</h1> -->
       <p>
-        A self-motivated and highly skilled IT professional with great experience and knowledge in problem solving. Highly organized and attention to details to provide high-quality software products to enhance user experience and built trust. As a continuous learner, open to new opportunities in legacy mainframe applications with advanced technologies or full stack web development with new proficiency up skilled in boot camp. 
+        Hi, I’m Vijay Prasaad. I’m a mainframe developer turned web developer with experience in different business domains and teams. 
+        My role included gathering requirements from product owners, develop, maintain and support various applications. 
+        I have worked with offshore team to identify solutions and ensure tasks were delivered on time. 
+        Urge to explore modern technologies and huge demand in today's time, I’m upskilling myself to be a web development.
     </div>
     <div class="btn">
-      <a id="btn-work" href="#work">#projects</a>
-      <a id="btn-contact" href="#contact">#contact</a>
+      <a id="btn-project" href="#project">Projects</a>
+      <a id="btn-contact" href="#contact">Contact</a>
     </div>
   </div>
 </section>
@@ -87,16 +84,33 @@
 <section id="about">
   <div class="iam">
     <h1>About Me</h1>
-    <p> 14+ years of experience in IBM Mainframe Senior Developer/Technical Lead in multiple projects, different business domains and geographical locations.
-      Responsible in business and functional requirements gathering, creating solid Design documentation and Technical documentation in collaboration with business product owners.      
-      Analyze complex programs for enhancements that involves review of existing systems’ configurations, operating methods and understanding evolving business needs.
-      Designed and build automation tools, performance tuning, and data analysis, troubleshooting complex issues, providing resolution within service level agreement, reduced tickets thru enhancements, knowledge management and sharing in IBM mainframe.
-      Hands on with varieties of tools and technologies.
-      Experience in Water-fall and knowledge in Agile methodology. Mentoring and knowledge sharing with the team.
-      Collaborate with different technology teams in providing solutions.
+    <p> 
+      I React, yet Responsible! After 14+ years of experience in Mainframe Technology, 
+      today my passion is to be more of an UI professional.      
+      <br><br>
+      I have always been committed in my roles and responsibilities which I have worked and have 
+      been working so far. Being there and having done with maintenance and support activities 
+      in a Water Fall software development model for over a decade, 
+      I’m turning into more Agile with the changing times. 
+      <br><br>
+      Though I have been in different business domains and geographical locations with varied 
+      team sizes, I feel I have not done any phenomenal stuff or saved billions of dollars in 
+      the technology realm so far, probably I have been with the classical applications which were 
+      already stabilized and no much room to progress in my perspective.  In fact, some of the 
+      technology skillsets which I have supported, had already sunset by the vendors themselves! 
+      <br><br>
+      It took me a while to upskill my competency from legacy to modern technology. Probably 
+      I’m a Turtle rather than a Hare! I think it is better to be late than never. It required me 
+      some confidence to take this decision and mindset to compete with the already 
+      experienced young professionals. It is my instinct rather than the statistical data of 
+      my work experience that urges me to pursue in the UI path with robustness. Currently I'm  
+      designing and developing front-end components for one of the startups of my buddy.
+      <br><br>
+      As a continuous learner, I’m eager to be part of your team where I can offer 
+      my IT experience, take challenges and bring success. Hoping to work with you soon!    
     </p>
       <!-- <img src="img/down.png" alt="Download image"> -->
-    <a class="resume" href="files/Resume.pdf" target="_blank" download>Resume</a>
+    <a class="resume" href="files/VijayPrasaad_KumarasamyThiyagarajan-Resume.pdf" target="_blank" download>Resume</a>
   </div>
 </section>
 <!---------------------------------------- Skills Section -------------------------------------------->
@@ -151,9 +165,9 @@
       </div>
   </div>
 </section>
-<!---------------------------------------- Work Section -------------------------------------------->
-<section id="work">
-    <h1>Recent Projects</h1>
+<!---------------------------------------- Project Section -------------------------------------------->
+<section id="project">
+    <h1>Projects</h1>
     <div class="projects">
       <div class="projects__item movie">
         <h2>webfl!x</h2>
@@ -170,14 +184,6 @@
         <div>
           <a id="git" href="https://github.com/ktvprasaad/meetup" target="_blank">GitHub</a>
           <a id="web" href="https://ktvprasaad.github.io/meetup/" target="_blank">Visit Site</a>
-        </div>
-      </div>
-      <div class="projects__item quiz">
-        <h2>Quiz</h2>
-        <p>Typescript, Angular & Material Design, SPA.</p>
-        <div>
-          <a id="git" href="https://github.com/ktvprasaad/quizApp" target="_blank">GitHub</a>
-          <a id="web" href="https://ktvprasaad.github.io/quizApp/welcome" target="_blank">Visit Site</a>
         </div>
       </div>
       <div class="projects__item dog">
@@ -199,18 +205,13 @@
   <div class="contact-dtl">
     <div class="contact-dtl__item msg">
       <h1>Contact</h1>
-      <p><span>Let's team up!!</span> for our new projects. You can reach me through any of my personal contacts!</p>
+      <p><span>Let us team up </span> for our new project! You can reach me through any of my personal contacts.</p>
     </div>
     <div class="contact-dtl__item ids">
       <a href="tel:+13024423252">Mobile</a><br>
       <a href="skype:viprasakt">Skype</a><br>
       <a href="mailto:prasaad.vijay@gmail.com">Email</a><br>
     </div>
-    <!-- <div class="contact__item pic">
-      <img src="img/letswork.png" alt="Contact">
-      <strong>Vijay Prasaad</strong><br>Philadelphia, PA<br><br>
-    </div> -->
-    <div></div>
   </div>
 </section>
 <!---------------------------------------- Footer -------------------------------------------->
