--- a/index.html
+++ b/index.html
@@ -72,7 +72,7 @@
         Hi, I’m Vijay Prasaad. I’m a mainframe developer turned web developer with experience in different business domains and teams. 
         My role included gathering requirements from product owners, develop, maintain and support various applications. 
         I have worked with offshore team to identify solutions and ensure tasks were delivered on time. 
-        Urge to explore modern technologies and huge demand in today's time, I’m upskilling myself to be a web development.
+        Urge to explore modern technologies and huge demand in today's time, I’m upskilling myself as a web developer.
     </div>
     <div class="btn">
       <a id="btn-project" href="#project">Projects</a>
