--- a/index.html
+++ b/index.html
@@ -65,14 +65,17 @@
   <section id="home">
   <div class="profile">
     <!-- Add your portrait image here -->
-    <img src="img/pic1.png" class="profile-img" alt="Vj's Portrait Image">
+    <img src="img/propic.png" class="profile-img" alt="Vj's Portrait Image">
     <div class="profile-content">
-      <!-- <h1>Hello !</h1> -->
+      <h1> Hi! I'm Vijay Prasaad!</h1>
       <p>
-        Hi, I’m Vijay Prasaad. I’m a mainframe developer turned web developer with experience in different business domains and teams. 
-        My role included gathering requirements from product owners, develop, maintain and support various applications. 
-        I have worked with offshore team to identify solutions and ensure tasks were delivered on time. 
-        Urge to explore modern technologies and huge demand in today's time, I’m upskilling myself as a web developer.
+        <br>
+        I'm a Mainframe Developer upskilled Web Developer. 
+        Have the urge to build software using cutting-edge technologies. 
+        <br><br>
+        Highly experienced in the software company, coupled with the intense boot camp training. 
+        Have a passion for creating great software products. 
+        <br><br>
     </div>
     <div class="btn">
       <a id="btn-project" href="#project">Projects</a>
@@ -84,33 +87,45 @@
 <section id="about">
   <div class="iam">
     <h1>About Me</h1>
-    <p> 
-      I React, yet Responsible! After 14+ years of experience in Mainframe Technology, 
-      today my passion is to be more of an UI professional.      
-      <br><br>
-      I have always been committed in my roles and responsibilities which I have worked and have 
-      been working so far. Being there and having done with maintenance and support activities 
-      in a Water Fall software development model for over a decade, 
-      I’m turning into more Agile with the changing times. 
-      <br><br>
-      Though I have been in different business domains and geographical locations with varied 
-      team sizes, I feel I have not done any phenomenal stuff or saved billions of dollars in 
-      the technology realm so far, probably I have been with the classical applications which were 
-      already stabilized and no much room to progress in my perspective.  In fact, some of the 
-      technology skillsets which I have supported, had already sunset by the vendors themselves! 
-      <br><br>
-      It took me a while to upskill my competency from legacy to modern technology. Probably 
-      I’m a Turtle rather than a Hare! I think it is better to be late than never. It required me 
-      some confidence to take this decision and mindset to compete with the already 
-      experienced young professionals. It is my instinct rather than the statistical data of 
-      my work experience that urges me to pursue in the UI path with robustness. Currently I'm  
-      designing and developing front-end components for one of the startups of my buddy.
-      <br><br>
-      As a continuous learner, I’m eager to be part of your team where I can offer 
-      my IT experience, take challenges and bring success. Hoping to work with you soon!    
-    </p>
-      <!-- <img src="img/down.png" alt="Download image"> -->
-    <a class="resume" href="files/VijayPrasaad_KumarasamyThiyagarajan-Resume.pdf" target="_blank" download>Resume</a>
+    <div class="abt">
+      <div class="abt-item">
+        <img src="/img/abtpic.jpg" alt="Coding">
+      </div>
+      <div class="abt-item">
+        <p> 
+          I "React"! 
+          <svg xmlns="http://www.w3.org/2000/svg" width="1.2em" height="1.2em" fill="none" viewBox="0 0 602 602">
+            <g><path stroke="#E91E63" stroke-miterlimit="10" stroke-width="24" d="M274.151 201.657c66.903-17.997 131.399-24.32 182.018-19.756l1.077-11.95-1.077 11.95c30.477 2.747 55.643 9.518 73.763 18.622 18.414 9.252 27.823 19.969 30.45 29.72h0c2.776 10.303-.231 25.206-12.364 43.484-11.936 17.98-31.68 37.56-58.646 56.139v.001c-40.663 28.018-98.24 52.637-161.885 69.759-65.406 17.596-128.7 26.024-178.487 21.651h0c-31.569-2.772-57.609-10.095-76.356-19.82-19.058-9.886-28.938-21.326-31.677-31.495h0c-2.636-9.786-.088-23.613 10.677-40.523 10.622-16.687 28.385-34.904 52.944-52.425l-6.724-9.425 6.724 9.425c41.556-29.647 101.985-57.176 169.563-75.357zm0 0l-3.116-11.583 3.116 11.583z"></path>
+              <path stroke="#E91E63" stroke-miterlimit="10" stroke-width="24" d="M373.214 228.061c49.036 48.941 86.758 101.635 108.114 147.755l10.889-5.042-10.889 5.042c12.859 27.768 19.578 52.949 20.754 73.194 1.194 20.573-3.382 34.081-10.514 41.232h0c-7.535 7.555-21.944 12.403-43.839 11.035-21.539-1.346-48.366-8.656-77.939-22.719l-.001-.001c-44.594-21.205-94.702-58.759-141.351-105.317l-8.138 8.153 8.138-8.153c-47.94-47.846-86.885-98.447-107.99-143.751h0c-13.383-28.726-20.062-54.939-21.013-76.038-.967-21.448 4-35.725 11.437-43.182h0c7.157-7.176 20.405-11.883 40.432-11.016 19.761.856 44.419 7.13 71.872 19.639l4.975-10.92-4.975 10.92c46.451 21.165 100.505 59.734 150.038 109.169zm0 0l8.477-8.494-8.477 8.494z"></path>
+              <path stroke="#E91E63" stroke-miterlimit="10" stroke-width="24" d="M325.98 494.55l9.811 6.909-9.811-6.909c-17.619 25.02-36.067 43.429-53.012 54.569-17.221 11.322-31.207 14.112-40.966 11.511h0c-10.311-2.747-21.714-12.801-31.476-32.447-9.604-19.326-16.687-46.213-19.294-78.855v-.001c-3.933-49.221 3.537-111.393 20.533-175.07l-11.594-3.095 11.594 3.095c17.467-65.44 41.817-124.466 70.5-165.396h0c18.186-25.953 37.549-44.843 55.345-56.216 18.091-11.562 32.94-14.398 43.117-11.686h0c9.793 2.61 20.494 11.73 29.756 29.506 9.139 17.541 16.035 42.032 18.928 72.06 4.896 50.811-1.48 116.906-19.526 184.519-17.867 66.937-44.642 125.951-73.905 167.506z"></path>
+            </g>
+            <path fill="#E91E63" d="M301.007 269.002a62.496 62.496 0 00-4.799-4.301c-1.568-1.254-3.439-2.596-5.615-4.026a30.06 30.06 0 00-7.055-3.411c-2.527-.842-5.007-1.264-7.436-1.264-8.779 0-15.657 2.43-20.635 7.29-4.979 4.859-7.467 11.601-7.467 20.223 0 8.661 4.488 17.479 13.463 26.455 0 0 24.492 21.967 39.544 36.043 15.053-14.076 39.545-36.043 39.545-36.043 8.975-8.976 13.463-17.794 13.463-26.455 0-8.622-2.488-15.364-7.467-20.223-4.978-4.86-11.856-7.29-20.635-7.29-2.429 0-4.909.422-7.436 1.264a30.06 30.06 0 00-7.055 3.411c-2.176 1.43-4.047 2.772-5.615 4.026a62.699 62.699 0 00-4.8 4.301z"></path>
+          </svg>
+          yet responsible! After 14+ years of experience in Mainframe technology, 
+          I would like to expand my coding skills to Front-end Web Development.     
+          <br><br>
+          I have always been committed to the roles and responsibilities that I have worked on. 
+          But having done with maintenance and support activities in a Waterfall development model 
+          for over a decade, I’m becoming Agile now.
+          <br><br>
+          I have been in different business domains and geographical locations. Being with varied 
+          team sizes, I have learned a lot and saved thousands of dollars. I see the demand for  
+          classic technology is getting lesser than  modern technology. Some of the skillsets that 
+          I have supported had already sunset by the vendors themselves! 
+          <br><br>
+          It took me a while to upskill my competency from legacy to modern technology. Probably 
+          I'm a Turtle🐢 rather than a Hare🐰! After pondering over various technologies, I decided to 
+          pursue in Front-end web development! It is my instinct that urged me to stride into the UI 
+          development path. Currently, I'm designing and developing the Front-end components for one 
+          of the startups of my buddy!
+          <br><br>
+          As a continuous learner, I’m eager to be part of a team where I can offer my IT experience 
+          and build efficient software. Hoping to work with you soon!  
+        </p>
+          <!-- <img src="img/down.png" alt="Download image"> -->
+        <a class="resume" href="files/VijayPrasaad_KumarasamyThiyagarajan-Resume.pdf" target="_blank" download>Resume</a>
+      </div>
+    </div>
   </div>
 </section>
 <!---------------------------------------- Skills Section -------------------------------------------->
@@ -174,7 +189,12 @@
         <p>JavaScript, React, MongoDB, Express, Node.js.</p>
         <div>
           <a id="git" href="https://github.com/ktvprasaad/movie_api" target="_blank">GitHub</a>
-          <a id="web" href="webflixcs.html">Case Study</a>
+          <a id="web" href="https://ktvprasaad.github.io/meetup/" target="_blank">Visit Site</a>
+        </div>
+        <br>
+        <div> 
+          <a id="case" href="webflixcs.html">Case Study</a>
+          <a id="api" href="https://webflix-api-2019.herokuapp.com/documentation.html" target="_blank">API Doc</a>
         </div>
         <!-- <a href="https://webflix-api-2019.herokuapp.com/client/" target="_blank">Visit Site</a> -->
       </div>
@@ -194,6 +214,14 @@
           <a id="web" href="https://ktvprasaad.github.io/breeds/" target="_blank">Visit Site</a>
         </div>
       </div>
+      <div class="projects__item chat">
+        <h2>ChatApp</h2>
+        <p>ES6, React Native, Firestore, Agile Methodology.</p>
+        <div>
+          <a id="git" href="https://github.com/ktvprasaad/Zchat" target="_blank">GitHub</a>
+          <!-- <a id="web" href="https://ktvprasaad.github.io/breeds/" target="_blank">Visit Site</a> -->
+        </div>
+      </div>
       <div class="projects__item contact">
         <h2>Looking for a Professional Web Developer?</h2>
         <a href="#contact">Contact me</a>
@@ -203,14 +231,16 @@
 <!---------------------------------------- Contact Section -------------------------------------------->
 <section id="contact">
   <div class="contact-dtl">
-    <div class="contact-dtl__item msg">
+    <div class="contact-dtl__item">
       <h1>Contact</h1>
-      <p><span>Let us team up </span> for our new project! You can reach me through any of my personal contacts.</p>
+      <p class="msg"><span>Let us team up</span> for our new project!
+        <br>
+        You can reach me through any of my personal contacts.</p>
     </div>
     <div class="contact-dtl__item ids">
       <a href="tel:+13024423252">Mobile</a><br>
       <a href="skype:viprasakt">Skype</a><br>
-      <a href="mailto:prasaad.vijay@gmail.com">Email</a><br>
+      <a id="email" href="mailto:prasaad.vijay@gmail.com">Email</a><br>
     </div>
   </div>
 </section>
