--- a/index.html
+++ b/index.html
@@ -89,7 +89,7 @@
     <h1>About Me</h1>
     <div class="abt">
       <div class="abt-item">
-        <img src="/img/code.jpg" alt="Coding">
+        <img src="img/code.jpg" alt="Coding">
       </div>
       <div class="abt-item">
         <p> 
