--- a/index.html
+++ b/index.html
@@ -21,7 +21,6 @@
   <!-- included css file for styling -->
   <link rel="stylesheet" href="css/style.production.css" type="text/css">
 </head>
-<!---------------------------------------- Body & Header -------------------------------------------->
 <body>
   <header>
     <a class="vj" href="index.html">
@@ -61,24 +60,15 @@
     </div>
     </nav>
   </header>
-  <!---------------------------------------- Home Section -------------------------------------------->
   <section id="home">
   <div class="profile">
-    <!-- Add your portrait image here -->
     <img src="img/propic.png" class="profile-img" alt="Vj's Portrait Image">
     <div class="profile-content">
-      <h1 id="name"> Hi! I'm Vijay Prasaad!</h1>
+      <h1 id="name">I am Vijay Prasaad!</h1>
       <p>
         <br>
-        I "React"! 
-          <svg xmlns="http://www.w3.org/2000/svg" width="1.2em" height="1.2em" fill="none" viewBox="0 0 602 602">
-            <g><path stroke="#ff8882" stroke-miterlimit="10" stroke-width="24" d="M274.151 201.657c66.903-17.997 131.399-24.32 182.018-19.756l1.077-11.95-1.077 11.95c30.477 2.747 55.643 9.518 73.763 18.622 18.414 9.252 27.823 19.969 30.45 29.72h0c2.776 10.303-.231 25.206-12.364 43.484-11.936 17.98-31.68 37.56-58.646 56.139v.001c-40.663 28.018-98.24 52.637-161.885 69.759-65.406 17.596-128.7 26.024-178.487 21.651h0c-31.569-2.772-57.609-10.095-76.356-19.82-19.058-9.886-28.938-21.326-31.677-31.495h0c-2.636-9.786-.088-23.613 10.677-40.523 10.622-16.687 28.385-34.904 52.944-52.425l-6.724-9.425 6.724 9.425c41.556-29.647 101.985-57.176 169.563-75.357zm0 0l-3.116-11.583 3.116 11.583z"></path>
-              <path stroke="#ff8882" stroke-miterlimit="10" stroke-width="24" d="M373.214 228.061c49.036 48.941 86.758 101.635 108.114 147.755l10.889-5.042-10.889 5.042c12.859 27.768 19.578 52.949 20.754 73.194 1.194 20.573-3.382 34.081-10.514 41.232h0c-7.535 7.555-21.944 12.403-43.839 11.035-21.539-1.346-48.366-8.656-77.939-22.719l-.001-.001c-44.594-21.205-94.702-58.759-141.351-105.317l-8.138 8.153 8.138-8.153c-47.94-47.846-86.885-98.447-107.99-143.751h0c-13.383-28.726-20.062-54.939-21.013-76.038-.967-21.448 4-35.725 11.437-43.182h0c7.157-7.176 20.405-11.883 40.432-11.016 19.761.856 44.419 7.13 71.872 19.639l4.975-10.92-4.975 10.92c46.451 21.165 100.505 59.734 150.038 109.169zm0 0l8.477-8.494-8.477 8.494z"></path>
-              <path stroke="#ff8882" stroke-miterlimit="10" stroke-width="24" d="M325.98 494.55l9.811 6.909-9.811-6.909c-17.619 25.02-36.067 43.429-53.012 54.569-17.221 11.322-31.207 14.112-40.966 11.511h0c-10.311-2.747-21.714-12.801-31.476-32.447-9.604-19.326-16.687-46.213-19.294-78.855v-.001c-3.933-49.221 3.537-111.393 20.533-175.07l-11.594-3.095 11.594 3.095c17.467-65.44 41.817-124.466 70.5-165.396h0c18.186-25.953 37.549-44.843 55.345-56.216 18.091-11.562 32.94-14.398 43.117-11.686h0c9.793 2.61 20.494 11.73 29.756 29.506 9.139 17.541 16.035 42.032 18.928 72.06 4.896 50.811-1.48 116.906-19.526 184.519-17.867 66.937-44.642 125.951-73.905 167.506z"></path>
-            </g>
-            <path fill="#ff8882" d="M301.007 269.002a62.496 62.496 0 00-4.799-4.301c-1.568-1.254-3.439-2.596-5.615-4.026a30.06 30.06 0 00-7.055-3.411c-2.527-.842-5.007-1.264-7.436-1.264-8.779 0-15.657 2.43-20.635 7.29-4.979 4.859-7.467 11.601-7.467 20.223 0 8.661 4.488 17.479 13.463 26.455 0 0 24.492 21.967 39.544 36.043 15.053-14.076 39.545-36.043 39.545-36.043 8.975-8.976 13.463-17.794 13.463-26.455 0-8.622-2.488-15.364-7.467-20.223-4.978-4.86-11.856-7.29-20.635-7.29-2.429 0-4.909.422-7.436 1.264a30.06 30.06 0 00-7.055 3.411c-2.176 1.43-4.047 2.772-5.615 4.026a62.699 62.699 0 00-4.8 4.301z"></path>
-          </svg>
-          yet responsible with enthusiasm for creating great web applications applying cutting-edge technologies!
+        Hi, I am Vijay Prasaad, a React
+          enthusiastic responsible for building web applications by applying creative solutions and cutting-edge technologies!
         <br><br>
     </div>
     <div class="btn">
@@ -108,23 +98,20 @@
           classic technology is getting lesser than modern technology,  I'm upskilling my coding skills to 
           Web applications. In fact, some of the skillsets that I have supported had already been sunset by the vendors! 
           <br><br>
-          It took me a while to upskill my competency from legacy to modern technology. 
-          Probably I am a Turtle🐢 rather than a Hare🐰! After pondering over various technologies, 
+          It took me a while to upskill my competency from legacy to modern technology. After pondering over various technologies, 
           I determined to pursue web development! It is my instinct that drove me to stride 
           into the UI development path. Currently, I am designing and developing the Front-end 
           components for one of the startups of my buddy!
           <br><br>
           As a continuous learner who has upskilled accelerated web development training, 
           I am eager to be part of a team where I can offer my IT experience and create efficient 
-          software products.  I'm hoping to work with you soon!  
+          software products through my problem solving skills and creative quality solutions.  I am hoping to work with you soon!  
         </p>
-          <!-- <img src="img/down.png" alt="Download image"> -->
         <a class="resume" href="files/VijayPrasaad_KumarasamyThiyagarajan-Resume.pdf" target="_blank" download>Resume</a>
       </div>
     </div>
   </div>
 </section>
-<!---------------------------------------- Skills Section -------------------------------------------->
 <section id="skills">
     <h1 class="comp">Skills</h1>
     <div class="skills-list">
@@ -176,55 +163,81 @@
       </div>
   </div>
 </section>
-<!---------------------------------------- Project Section -------------------------------------------->
 <section id="project">
     <h1>Projects</h1>
     <div class="projects">
       <div class="projects__item movie">
-        <h2>webfl!x</h2>
-        <p>JavaScript, React, MongoDB, Express, Node.js.</p>
-        <div>
-          <a id="git" href="https://github.com/ktvprasaad/movie_api" target="_blank">GitHub</a>
-          <a id="web" href="https://webflix-api-2019.herokuapp.com/client/" target="_blank">Visit Site</a>
-        </div>
-        <br>
         <div> 
-          <a id="case" href="webflixcs.html">Case Study</a>
-          <a id="api" href="https://webflix-api-2019.herokuapp.com/documentation.html" target="_blank">API Doc</a>
+          <img src="images/webflix.png" alt="webflix" class="movie-img">
         </div>
-        <!-- <a href="https://webflix-api-2019.herokuapp.com/client/" target="_blank">Visit Site</a> -->
+        <div class="movie-desc">
+          <h2>webfl!x</h2>
+          <p>React, MongoDB, Express, Node.js, React-Redux.</p>
+          <div class="links">
+            <div>
+              <a id="git" href="https://github.com/ktvprasaad/movie_api" target="_blank">GitHub</a>
+              <a id="web" href="https://webflix-api-2019.herokuapp.com/client/" target="_blank">Visit Site</a>
+            </div>
+            <br>
+            <div> 
+              <a id="case" href="webflixcs.html">Case Study</a>
+              <a id="api" href="https://webflix-api-2019.herokuapp.com/documentation.html" target="_blank">API Doc</a>
+            </div>
+          </div>
+        </div>
+      </div>
+      <div class="projects__item seashell">
+        <div> 
+          <img src="images/seashell.png" alt="seashell" class="seashell">
+        </div>
+        <div class="seashell-desc">
+          <h2>seashell player</h2>
+          <p>HTML5, CSS, React, Audio Player.</p>
+          <div>
+            <a id="git" href="https://github.com/ktvprasaad/seashellplayer" target="_blank">GitHub</a>
+            <a id="web" href="https://ktvprasaad.github.io/seashellplayer/" target="_blank">Visit Site</a>
+          </div>
+       </div>
       </div>
       <div class="projects__item meet">
-        <h2>MeetUp</h2>
-        <p>JavaScript, React, Serverless functions, PWA and Data Visualization.</p>
-        <div>
-          <a id="git" href="https://github.com/ktvprasaad/meetup" target="_blank">GitHub</a>
-          <a id="web" href="https://ktvprasaad.github.io/meetup/" target="_blank">Visit Site</a>
+        <div> 
+          <img src="images/meet.png" alt="meetup" class="meetup">
         </div>
-      </div>
-      <div class="projects__item dog">
-        <h2>Breeds</h2>
-        <p>JavaScript, DOM, Ajax, jQuery & Bootstrap.</p>
-        <div>
-          <a id="git" href="https://github.com/ktvprasaad/breeds" target="_blank">GitHub</a>
-          <a id="web" href="https://ktvprasaad.github.io/breeds/" target="_blank">Visit Site</a>
+        <div class="meet-desc">
+          <h2>MeetUp</h2>
+          <p>JavaScript, React, Serverless functions, TDD, BDD, PWA & Data Visualization.</p>
+          <div>
+            <a id="git" href="https://github.com/ktvprasaad/meetup" target="_blank">GitHub</a>
+            <a id="web" href="https://ktvprasaad.github.io/meetup/" target="_blank">Visit Site</a>
+          </div>
         </div>
       </div>
       <div class="projects__item chat">
-        <h2>ChatApp</h2>
-        <p>ES6, React Native, Firestore, Agile Methodology.</p>
-        <div>
-          <a id="git" href="https://github.com/ktvprasaad/Zchat" target="_blank">GitHub</a>
-          <!-- <a id="web" href="https://ktvprasaad.github.io/breeds/" target="_blank">Visit Site</a> -->
+        <div> 
+          <img src="images/zchat.png" alt="chat" class="chat">
+        </div>
+        <div class="chat-desc">
+          <h2>ChatApp - Mobile App</h2>
+          <p>React Native, Gifted Chat, Firestore.</p>
+          <div>
+            <a id="git" href="https://github.com/ktvprasaad/Zchat" target="_blank">GitHub</a>
+          </div>
         </div>
       </div>
-      <div class="projects__item contact">
-        <h2>Looking for a Professional Web Developer?</h2>
-        <a href="#contact">Contact me</a>
+      <div class="projects__item breeds">
+        <div> 
+          <img src="images/breeds.png" alt="breeds" class="breeds">
+        </div>
+        <div class="breeds-desc">
+          <h2>Breeds</h2>
+          <p>JavaScript, DOM, Ajax, jQuery & Bootstrap.</p>
+          <div>
+            <a id="git" href="https://github.com/ktvprasaad/breeds" target="_blank">GitHub</a>
+            <a id="web" href="https://ktvprasaad.github.io/breeds/" target="_blank">Visit Site</a>
+          </div>
+          </div>
       </div>
-    </div>
 </section>
-<!---------------------------------------- Contact Section -------------------------------------------->
 <section id="contact">
   <div class="contact-dtl">
     <div class="contact-dtl__item">
@@ -234,15 +247,13 @@
         You can reach me through any of my personal contacts.</p>
     </div>
     <div class="contact-dtl__item ids">
-      <a href="tel:+13024423252">Mobile</a><br>
-      <a href="skype:viprasakt">Skype</a><br>
+      <a id="mobile" href="tel:+13024423252">Mobile</a><br>
+      <a id="skype" href="skype:viprasakt">Skype</a><br>
       <a id="email" href="mailto:prasaad.vijay@gmail.com">Email</a><br>
     </div>
   </div>
 </section>
-<!---------------------------------------- Footer -------------------------------------------->
   <footer class="page-footer">
-    <!--svg version="1.1" width="30px" height="30px" enable-background="new 0 0 48 48"-->
     <div class="social-media">
       <!-- Github logo -->
       <a href="https://github.com/ktvprasaad" target="_blank"><img src="img/github_logo.svg" alt="github"></a>
@@ -250,13 +261,9 @@
       <a href="https://twitter.com/VijayPrasaadKT" target="_blank"><img src="img/twitter_logo.svg" alt="twitter"></a>
       <!-- LinkedIn logo -->
       <a href="https://www.linkedin.com/in/ktvprasaad-vj/" target="_blank"><img src="img/linkedin_logo.svg" alt="linkedin"></a>
-      <!-- Medium logo -->
-      <!-- <a href="https://medium.com/@prasaad.vijay/" target="_blank"><img src="img/medium_logo.svg" alt="medium"></a> -->
     </div>
     <h6>© 2020 Vijay Prasaad KT</h6>  
   </footer>
-  <!-- Accessibility checker and to find errors -->
-  <!-- <script src="js/tota11y.min.js"></script> -->
   <script src="https://cdnjs.cloudflare.com/ajax/libs/gsap/3.2.4/gsap.min.js"></script>
   <script src="js/index.js"></script>
 </body>
