Summary Change and style
Summary Change and style

--- a/index.html
+++ b/index.html
@@ -6,17 +6,11 @@
   <meta name="keywords" content="Full Stack Web Developer in Conshohocken PA, 
   MERN Developer in Conshohocken PA, IBM Mainframe Developer in Conshohocken PA, 
   Professional Web Developer in Conshohocken PA">
-  <title>Vijay - Profile</title>
+  <title>Pro-File</title>
   <!--Favicon-->
   <link rel="shortcut icon" href="img/favicon-16x16.png" type="img/favicon-16x16.png"/>
   <!-- Reset the browser styling -->
   <link rel="stylesheet" type="text/css" href="https://cdnjs.cloudflare.com/ajax/libs/normalize/8.0.0/normalize.min.css">
-  <!-- <link
-  rel="stylesheet"
-  href="https://stackpath.bootstrapcdn.com/bootstrap/4.3.1/css/bootstrap.min.css"
-  integrity="sha384-ggOyR0iXCbMQv3Xipma34MD+dH/1fQ784/j6cY/iJTQUOhcWr7x9JvoRxT2MZw1T"
-  crossorigin="anonymous"
-  /> -->
   <link href="https://fonts.googleapis.com/css2?family=Open+Sans&display=swap" rel="stylesheet">
   <!-- included css file for styling -->
   <link rel="stylesheet" href="css/style.production.css" type="text/css">
@@ -24,7 +18,7 @@
 <body>
   <header>
     <a class="vj" href="index.html">
-      <h3>Vijay</h3>
+      <h3>VJ</h3>
     </a>
     <nav>
       <svg class="menu" id="menu-btn" viewBox="0 0 27.329 17">
@@ -67,8 +61,8 @@
       <h1 id="name">I am Vijay Prasaad!</h1>
       <p>
         <br>
-        Hi, I am Vijay Prasaad, a React
-          enthusiastic responsible for building web applications by applying creative solutions and cutting-edge technologies!
+        Hello. I'm Vijay Prasaad. A React enthusiastic, responsible Web and Mobile Applications Developer, 
+        keen on engineering software products by applying creative solutions and cutting-edge technologies.
         <br><br>
     </div>
     <div class="btn">
@@ -171,8 +165,8 @@
           <img src="images/webflix.png" alt="webflix" class="movie-img">
         </div>
         <div class="movie-desc">
-          <h2>webfl!x</h2>
-          <p>React, MongoDB, Express, Node.js, React-Redux.</p>
+          <h2>webflix - A Movie App</h2>
+          <p>React, MongoDB, Express, Node.js, React-Redux, API.</p>
           <div class="links">
             <div>
               <a id="git" href="https://github.com/ktvprasaad/movie_api" target="_blank">GitHub</a>
@@ -191,7 +185,7 @@
           <img src="images/seashell.png" alt="seashell" class="seashell">
         </div>
         <div class="seashell-desc">
-          <h2>seashell player</h2>
+          <h2>seashell player - A Podcast App</h2>
           <p>HTML5, CSS, React, Audio Player.</p>
           <div>
             <a id="git" href="https://github.com/ktvprasaad/seashellplayer" target="_blank">GitHub</a>
@@ -204,8 +198,8 @@
           <img src="images/meet.png" alt="meetup" class="meetup">
         </div>
         <div class="meet-desc">
-          <h2>MeetUp</h2>
-          <p>JavaScript, React, Serverless functions, TDD, BDD, PWA & Data Visualization.</p>
+          <h2>MeetUp - Events' App using MeetUp API</h2>
+          <p>JavaScript, React, API, Serverless functions, TDD, BDD, PWA & Data Visualization.</p>
           <div>
             <a id="git" href="https://github.com/ktvprasaad/meetup" target="_blank">GitHub</a>
             <a id="web" href="https://ktvprasaad.github.io/meetup/" target="_blank">Visit Site</a>
@@ -217,7 +211,7 @@
           <img src="images/zchat.png" alt="chat" class="chat">
         </div>
         <div class="chat-desc">
-          <h2>ChatApp - Mobile App</h2>
+          <h2>ChatApp - A Mobile App</h2>
           <p>React Native, Gifted Chat, Firestore.</p>
           <div>
             <a id="git" href="https://github.com/ktvprasaad/Zchat" target="_blank">GitHub</a>
@@ -229,8 +223,8 @@
           <img src="images/breeds.png" alt="breeds" class="breeds">
         </div>
         <div class="breeds-desc">
-          <h2>Breeds</h2>
-          <p>JavaScript, DOM, Ajax, jQuery & Bootstrap.</p>
+          <h2>Breeds - An App for Dog Lovers</h2>
+          <p>JavaScript, Public API, DOM, Ajax, jQuery & Bootstrap.</p>
           <div>
             <a id="git" href="https://github.com/ktvprasaad/breeds" target="_blank">GitHub</a>
             <a id="web" href="https://ktvprasaad.github.io/breeds/" target="_blank">Visit Site</a>
